Update references to question files

--- a/index.html
+++ b/index.html
@@ -7,34 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="mobile.css" />
-    <script type="text/javascript" src="./questionsJSON/arbeitsRechtFragen.json"></script>   
+    <script type="text/javascript" src="./questionsJSON/genders.json"></script>   
     <script type="text/javascript" src="./questionsJSON/vokabeln.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/hgbFragen.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/orgaFragen.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/interkulturelleKompetenzen.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/internationalesManagement.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/integrierteKommunikation.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/medienRecht.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/unternehmensEthik.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/somFragen.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/bapFragen.json"></script>   
 </head>
 <body>
     <section class="container">
         <div class="head">
             <lable class="lable" for="kartendecks">Wähle deinen Kartensatz:</lable>
             <select class="decks" name="kartendecks" id="decks">
-                <option id="bap" value="bap">Business and Performance Management</option>
-                <option id="som" value="som">Service and Operations Management</option>
-                <option id="u-ethik" value="u-ethik">Unternehmensethik</option>
-                <option id="m-recht" value="m-recht">Medienrecht</option>
-                <option id="int-komm" value="int-komm">Integrierte Unternehmenskommunikation</option>
-                <option id="int-management" value="int-management">Internationales Management</option>
-                <option id="int-kompetenzen" value="int-kompetenzen">Internationale Kompetenzen</option>
-                <option id="organisation" value="organisation">Organisation und Führung</option>
-                <option id="arb-recht" value="arb-recht">Arbeitsrecht</option>
-                <option id="h-recht" value="h-recht">Handelsrecht</option>
-                <option id="vokabeln" value="vokabeln">vokablen</option>
+                <option id="genders" value="genders">Genders</option>
+                <option id="vokabeln" value="vokabeln">Vokabeln</option>
             </select>
         </div>
 
