Move correct/incorrect buttons onto back of card

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
             </select>
         </div>
 
-    <button type="button" class="correct next">hab ich gewusst</button>
-
     <div class="card">
         <div class="front">
             <section class="content">
@@ -38,10 +36,13 @@
                     <p class="solution">...</p>
                     <button type="button" class="new_word">neue Frage</button>
                 </section>
-        </div>
+                <section class="confirmation">
+                    <button type="button" class="correct next">&#10004;</button>
+                    <button type="button" class="wrong next">X</button>
+                </section>
+    </div>
     </div>
 
-    <button type="button" class="wrong next">beim nächsten Mal</button>
 
     <h4 id="known">Bisher gewusst:</h4>
     <h3 class="remaining"></h3>
