Enlarge card content

--- a/index.html
+++ b/index.html
@@ -23,17 +23,18 @@
     <div class="card">
         <div class="front">
             <section class="content">
-                <h2>Frage:</h2>
-                <p class="question"></p>
+                <p></p>
+                <h2><p class="question"></p></h2>
                 <input class="answer" type="text" placeholder="translation">
-                <button type="button" class="check_answer">&uuml;berpr&uuml;fen</button>
+            </section>
+            <section class="confirmation">
+                <button type="button" class="check_answer">check</button>
             </section>
         </div>
         <div class="back">
                 <button class="return">was war die Frage?</button>
                 <section class="content">
-                        <h2>Antwort:</h2>
-                    <p class="solution">...</p>
+                    <h2><p class="solution">...</p></h2>
                     <button type="button" class="new_word">neue Frage</button>
                 </section>
                 <section class="confirmation">
