--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <section class="container">
         <div class="head">
-            <lable class="lable" for="kartendecks">Wähle deinen Kartensatz:</lable>
+            <lable class="lable" for="kartendecks">Card Set:</lable>
             <select class="decks" name="kartendecks" id="decks">
                 <option id="genders" value="genders">Genders</option>
                 <option id="vokabeln" value="vokabeln">Vokabeln</option>
@@ -32,10 +32,10 @@
             </section>
         </div>
         <div class="back">
-                <button class="return">was war die Frage?</button>
+                <button class="return">What was the question?</button>
                 <section class="content">
                     <h2><p class="solution">...</p></h2>
-                    <button type="button" class="new_word">neue Frage</button>
+                    <button type="button" class="new_word">New question</button>
                 </section>
                 <section class="confirmation">
                     <button type="button" class="correct next">&#10004;</button>
@@ -45,10 +45,10 @@
     </div>
 
 
-    <h4 id="known">Bisher gewusst:</h4>
+    <h4 id="known">Correct:</h4>
     <h3 class="remaining"></h3>
-    <h4 id="next">Nächste Runde:</h4>
-    <button type="button" class="reload">ganz von vorn</button>
+    <h4 id="next">Next Round:</h4>
+    <button type="button" class="reload">Restart</button>
 
     </section>
 
