Substitute my own vocab list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="mobile.css" />
     <script type="text/javascript" src="./questionsJSON/genders.json"></script>   
-    <script type="text/javascript" src="./questionsJSON/vokabeln.json"></script>   
+    <script type="text/javascript" src="./questionsJSON/vocab.json"></script>   
 </head>
 <body>
     <section class="container">
@@ -16,7 +16,7 @@
             <lable class="lable" for="kartendecks">Card Set:</lable>
             <select class="decks" name="kartendecks" id="decks">
                 <option id="genders" value="genders">Genders</option>
-                <option id="vokabeln" value="vokabeln">Vokabeln</option>
+                <option id="vocab" value="vocab">Vocabulary</option>
             </select>
         </div>
 
